--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -34,7 +34,7 @@
                 font-size: 60px;
                 font-style: italic;
             }
-            #Header, #Description, #Button hr
+            #Header hr
             {
                 margin: 50px;
             }
@@ -55,6 +55,10 @@
                 margin-right: auto;
                 width: 80%;
             }
+            #Description hr
+            {
+                margin: 50px;
+            }
 
             #Button button
             {
@@ -69,6 +73,11 @@
                 height: 40px;
                 font-size: 16px;
             }
+            #Button hr
+            {
+                margin: 50px;
+            }
+
             .align-left
             { 
                 float: left;
@@ -138,6 +147,7 @@
             <div class="align-right">Tracer Width Mod</div>
             <div class="align-left">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
             <div class="align-right">Toggleable Store Labels</div>
+            <br>
         </div>
         <div id = "Button">
             <hr>
