--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -116,7 +116,6 @@
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <hr>
             <h1>Amazing Script Containing:</h1>
-            <br>
             <div class="align-left">Working TP Bypass</div>
             <div class="align-right">Car NoClip</div>
             <div class="align-left">Car Jump</div>
@@ -146,8 +145,7 @@
             <div class="align-left">Criminal, Police, Prisoner, Airdrop Tracers</div>
             <div class="align-right">Tracer Width Mod</div>
             <div class="align-left">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
-            <div class="align-right">Toggleable Store Labels</div>
-            <br>
+            <div class="align-right">Toggleable Store Labels<br></div>
         </div>
         <div id = "Button">
             <hr>
