--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -145,7 +145,8 @@
             <div class="align-left">Criminal, Police, Prisoner, Airdrop Tracers</div>
             <div class="align-right">Tracer Width Mod</div>
             <div class="align-left">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
-            <div class="align-right">Toggleable Store Labels<br></div>
+            <div class="align-right">Toggleable Store Labels</div>
+            <h1> </h1>
         </div>
         <div id = "Button">
             <hr>
