--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -66,7 +66,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 color: rgb(255, 255, 255);
-                background-color: rgb(45, 45, 45);
+                background-color: transparent;
                 border-radius: 20px;
                 cursor: pointer;
                 width: 80%;
